Nice WebUI for choosing segments

--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kart Lap Overlay</title>
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&family=Space+Grotesk:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <div class="page">
-      <header class="hero">
-        <div class="hero__tag">Kart telemetry overlay</div>
-        <h1>
-          Turn raw GoPro laps into
-          <span class="glow">race-ready</span>
-          overlays.
-        </h1>
-        <p>
-          Upload your footage, paste lap times, pick a driver, and let ffmpeg
-          stamp a clean lap timer on top. Get a single-frame preview to check
-          colors, then fire off the render and download.
-        </p>
-        <div class="hero__chips">
-          <span>4GB+ uploads handled with streaming</span>
-          <span>Teamsport + Daytona formats</span>
-          <span>Pick a start frame</span>
-        </div>
-      </header>
 
-      <main class="steps" id="stepsRoot"></main>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kart Lap Overlay</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&family=Space+Grotesk:wght@400;500&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="/style.css" />
+</head>
 
-    <script type="module" src="/app.js"></script>
-  </body>
+<body>
+  <div class="page">
+    <header class="hero">
+      <div class="hero__tag">Kart telemetry overlay</div>
+      <h1>
+        Turn raw GoPro files into
+        <span class="glow">race-ready</span>
+        footage.
+      </h1>
+      <div class="hero__chips">
+        <span>4GB+ uploads handled with streaming</span>
+      </div>
+    </header>
+
+    <main class="steps" id="stepsRoot"></main>
+  </div>
+
+  <script type="module" src="/app.js"></script>
+</body>
+
 </html>
