--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lap Time Overlap</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/app.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>RaceCraft</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/app.js"></script>
+</body>
+
 </html>
