--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RaceCraft</title>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 </head>
 
 <body>
